# boids

./: Cargo.toml
boids/: Cargo.toml
boids/src/: gui_form.rs  main.rs
boids/src/data/: boid.rs  mod.rs  steering.rs  vector.rs  world.rs
gui/: Cargo.toml
gui/src/: alignment.rs  background.rs  border.rs  button.rs  event.rs  fill.rs  font.rs  gui.rs  hbox.rs  label.rs  lib.rs  main.rs  mouse.rs  node.rs  node_data.rs  node_geometry.rs  node_model.rs  node_state.rs  pane.rs  position.rs  private_node.rs  root.rs  size.rs  slider.rs  text_style.rs  vbox.rs  widget.rs  widget_data.rs  widget_geometry.rs  widget_model.rs  widget_operation.rs  widget_state.rs
src/: gui_form.rs  main.rs
src/data/: mod.rs  steering.rs  vector.rs  world.rs
tree/: Cargo.toml
tree/src/: tree.rs
